2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.17.
	
==================== 0.16 ====================

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: Version 0.16.
	
2005-03-18  Mark McLoughlin  <markmc@redhat.com>
	
	* lib/userprofile.py: import sources from the
	sources module.
	
	* lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/sources/mozillasource.py,
	  lib/sources/paneldelegate.py,
	  lib/sources/testsource.py: import the
	various sabayon python modules from the
	sabayon namespace instead of expecting
	them to be in the toplevel namespace.

	* lib/sources/__init__.py: module init script
	for the sources module.
	
	* lib/sources/Makefile.am: install __init__.py

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: fix blooper.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: fix problems with displaying
	empty profiles.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: hopefully fix problem	which
	was causing obstuse "@INTLTOOL_PERL@: bad interpreter"
	error messages.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: forgot some fixes.

2005-03-18  Mark McLoughlin  <markmc@redhat.com>

	Re-work the way we install all the python stuff to
	bring us in line with normal conventions.

	* admin-tool/Makefile.am: install the python files
	in libdir/python/site-packages/sabayon, remove the
	wrapper scripts and install the python main scripts
	in sbindir/libexec etc.
	
	* admin-tool/sabayon: renamed from sabayon.py

	* admin-tool/sabayon-apply: renamed from sabayon-apply.py.
	
	* admin-tool/sabayon-monitor: renamed from sabayon-monitor.py.
	
	* admin-tool/sabayon-session: renamed from sabayon-session.py.
	
	* lib/Makefile.am: install __init__.py and install
	python files in libdir/python/site-packages/sabayon.
	
	* lib/__init__.py: empty module init script.
	