@@ -1,5 +1,10 @@
 2005-03-18  Mark McLoughlin  <markmc@redhat.com>
 
+	* sabayon.spec.in: add BuildRequires: gettext-devel
+	and add X-Fedora-Extra to .desktop file.
+
+2005-03-18  Mark McLoughlin  <markmc@redhat.com>
+
 	* configure.ac: post-release bump to 0.17.
 	
 ==================== 0.16 ====================
